@@ -79,6 +79,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Make device descriptions more useful, make dagN conditional.
       Use PCAP_ERROR_NO_SUCH_DEVICE more in dag_activate().
       Validate capture device names better.
+      Enumerate streams without trying to lock them.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 1.10.6 libpcap release (so far!)
